feat: improved contexts and environments pages
